--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" href="">
+    <link rel="icon" href="" sizes="16x16">
+    <link rel="icon" href="" sizes="32x32">
+    <link rel="icon" href="" sizes="192x192">
+    <link rel="icon" href="" sizes="512x512">
   </head>
   <body>
     <div class="main">
